third_party/llvm-project/llvm/test/Assembler/invalid-byval-type2.ll
; RUN: not llvm-as %s -o /dev/null 2>&1 | FileCheck %s

; CHECK: error: void type only allowed for function results
declare void @foo(i32* byval(void))
